<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:text="@string/grupa"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/Orange"
            android:text="@string/klasa"
            android:textSize="60sp"
            android:textStyle="italic"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:text="@string/jeden"
            android:textSize="60sp"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </LinearLayout>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Radio1"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_marginStart="10sp"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Radio2"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_gravity="center"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Radio1"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_gravity="end"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <GridLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="1"
            android:background="@color/Yellow">
            <View
                android:layout_margin="20dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@color/white"
                />
            <View
                android:layout_margin="20dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@color/white"
                />
            <View
                android:layout_margin="20dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@color/white"
                />
            <View
                android:layout_margin="20dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@color/white"
                />

        </GridLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_margin="20dp"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:background="@color/MidnightBlue">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/Yellow"
                    android:text="@string/button"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp"/>

            </FrameLayout>
            
            <GridLayout

                android:layout_margin="20dp"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:rowCount="3"
                android:columnCount="4"
                android:background="@color/Magenta">

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    />

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    />

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_rowSpan="3"
                    />

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    />
                <View
                    android:background="@color/Red"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_columnSpan="2"
                    />

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    />

                <View
                    android:background="@color/Red"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_column="2"
                    android:layout_row="2"
                    />




            </GridLayout>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/Name"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/klasa"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_gravity="center"
        />


</LinearLayout>